--- a/index.html
+++ b/index.html
@@ -2,15 +2,16 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Hello World!</title>
+    <title>Grammar Checkr</title>
   </head>
   <body>
-    <h1>Hello World!</h1>
+    <h1>This is a Grammar Checker! Paste your text bellow!</h1>
     <!-- All of the Node.js APIs are available in this renderer process. -->
-    We are using Node.js <script>document.write(process.versions.node)</script>,
-    Chromium <script>document.write(process.versions.chrome)</script>,
-    and Electron <script>document.write(process.versions.electron)</script>.
-
+    <button id="check-button">Check</button>
+    <p spellcheck="true">
+      <textarea id="text-input" rows="45" cols="100" placeholder="Your text here" autofocus></textarea>
+    </p>
+    <script src="./window.js" charset="utf-8"></script>
     <script>
       // You can also require other files to run in this process
       require('./renderer.js')
